# Django_SiteEAD

./: Pipfile  pyproject.toml  requirements.txt
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/: dashboard.html  edit.html  edit_password.html  login.html  password_reset.html  password_reset_confirm.html  password_reset_mail.html  register.html
core/: mail.py  urls.py  utils.py  views.py
core/templates/: base.html  contact.html  home.html
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_auto_20201106_0349.py  0002_comment.py  0003_auto_20201107_1757.py  0003_auto_20201120_0803.py  0004_auto_20201107_2314.py  0004_auto_20201120_0813.py  0005_auto_20201120_0838.py  0005_enrollment.py  0006_auto_20201123_0814.py  0007_auto_20201123_0903.py  0008_auto_20201123_0910.py  0009_auto_20201123_0911.py  0010_auto_20201208_1358.py
courses/templates/: announcements.html  contact_mail.html  course_dashboard.html  detail.html  index.html  lesson.html  lessons.html  material.html  show_announcement.html  undo_enrollment.html
courses/templates/_tags/: my_courses.html
courses/templatetags/: courses_tags.py
forum/: admin.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_replay_thread.py  0003_auto_20201208_1358.py  0004_thread_slug.py
forum/templates/forum/: index.html  thread.html
plataforma/: asgi.py  settings.py  urls.py  wsgi.py
