[tool.poetry]
name = "django_siteead"
version = "0.1.0"
description = ""
authors = ["LeoGraciano <leonardof.graciano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
freeze = "^3.0"
pipfile = "^0.0.2"
isort = "^5.6.4"
Django = "^3.1.3"
Pillow = "^8.0.1"
pylint = "^2.6.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.790"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
